--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-"asdf"
+Id,FirstName,LastName,Street1,Street2,City,State,Zip
+1,Bruce,What,1600 Pennsylvania Ave,,Washington,D.C.,20500
+2,Clark,asdf,1600 Pennsylvania Ave,,Washington,D.C.,20500
+3,Lebron,werqwe,1600 Wrong Address Ave,,Washington,D.C.,20500
+4,Bruce,Oxcvb,1234 Timmy Ave,,Blank,D.C.,20500
